simplifying layout and building out partials

--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -1,5 +1,3 @@
-<%# if job.user != current_user # do not show a user own jobs  %>
-
 <div class="booyah-box">
   <div class="row">
     <div class="col-md-4">
@@ -15,15 +13,14 @@
       <p>Place: <%= job.drop_off_location %></p>
       <p>Pick up: <%= job.pick_up_time.to_formatted_s(:long_ordinal) %></p>
       <p>Place: <%= job.pick_up_location %></p>
-      <%# logged in as walker %>
+      <% if job.user != current_user # logged in as walker %>
       <%= simple_form_for Request.new, url: requests_path(current_user, 
   request: { user_id: current_user, requested_of_user_id: job.user, job_id: job, status: 'pending'}
   ), method: :post do |f| %>
       <%= f.button :submit, 'Walk this pup!', class: 'btn btn-success btn-xs'%>
       <% end %>
+      <% end %>
     </div>
   </div><!-- row -->
 </div><!-- booyah-box -->
-
-<%# end %>
 <br>
