--- a/app/views/availabilities/_availability.html.erb
+++ b/app/views/availabilities/_availability.html.erb
@@ -1,4 +1,5 @@
 <div class="booyah-box">
+  <%#= availability.requests.last.status %>
   <div class="row">
     <div class="col-md-4">
       <%= image_tag availability.user.pic, class: 'img-responsive' %>
