--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -1,4 +1,5 @@
 <div class="booyah-box">
+  <%#= job.requests.last.status %> <!-- unless job.requests.last.nil? -->
   <div class="row">
     <div class="col-md-4">
       <%= "#{job.user.email}" %>
