--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -1,5 +1,5 @@
 <div class="booyah-box">
-  <%#= job.requests.last.status %> <!-- unless job.requests.last.nil? -->
+  <strong><%= job.requests.last.status unless job.requests.empty? %></strong>
   <div class="row">
     <div class="col-md-4">
       <%= "#{job.user.email}" %>
