--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -24,5 +24,5 @@
 
   <br>
 
-  <p><%= link_to "Have your pup walked by an Amazonian", availabilities_path, class: 'btn btn-primary btn-xlarge' %></p>
+  <p><%#= link_to "Have your pup walked by an Amazonian", availabilities_path, class: 'btn btn-primary btn-xlarge' %></p>
 </div>
