--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -3,7 +3,7 @@
 <h1>Pups</h1>
 
 <% @jobs.each do |job| %>
-<% if job.user != current_user && job.requests.empty? %>
+<% if job.requests.empty? %>
 <%= render partial: 'job', locals: { job: job } %>
 <% end %>
 <% end %>
