--- a/app/views/pups/_pup.html.erb
+++ b/app/views/pups/_pup.html.erb
@@ -1,3 +1,4 @@
+<% if !pup.hidden %>
 <div class="booyah-box"> 
   <div class="row">
     <div class="col-md-2">  
@@ -23,7 +24,10 @@
 
     <div class="col-md-6">
       <%= link_to 'Edit Pup', edit_user_pup_path(current_user, pup), class: 'btn btn-warning' %>
-      <%= link_to 'Destroy Pup', user_pup_path(current_user, pup), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+      <%= simple_form_for pup, url: user_pup_path(current_user, pup, pup: { hidden: true }) do |f| %>
+      <%= f.button :submit, 'Delete Pup', data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'%>
+      <% end %>
     </div>
   </div><!-- row -->
 </div><!-- booyah-box --> 
+<% end %>
