--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
 <br>
 <% end %>
 
-<h1>Upcoming Walks</h1> 
+<h1>My pup is walking</h1> 
 <%= link_to 'New Job', new_job_path, class: 'btn btn-primary' %>
 <br>
 <br>
@@ -20,9 +20,24 @@
 <%= render partial: 'jobs/job', locals: { job: job } %>
 <% end %>
 
+<h1>I am walking someone else's pup</h1> 
+<br>
+<% @requests.each do |request| %>
+<%= render partial: 'jobs/job', locals: { job: request.job } %>
+<% end %>
+
+
 <%#= link_to 'New Availability', new_availability_path, class: 'btn btn-primary' %>
 <!-- <br> -->
 <!-- <br> -->
 <%# @availabilities.each do |availability| %> 
 <%#= render partial: 'availabilities/availability', locals: { availability: availability } %>
 <%# end %>
+
+<br>
+<br>
+<br>
+<%= link_to 'Delete Account :(', user_path(current_user), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+<br>
+<br>
+<br>
