simplify request structure and tests

--- a/app/views/walk_request/_walk_request_cancel.html.erb
+++ b/app/views/walk_request/_walk_request_cancel.html.erb
@@ -1,6 +1,5 @@
 <p><strong>
   <%= link_to 'Cancel', edit_user_request_url(id: @request,
-  user_id: @request.user, 
-  status: 'cancelled') %>
+  user_id: @request.user, status: 'cancelled'), method: :delete %>
   </strong></p>
 
