add functionality for users not signed in

--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -15,18 +15,26 @@
       <p>Place: <%= job.drop_off_location %></p>
       <p>Pick up: <%= job.pick_up_time.to_formatted_s(:long_ordinal) %></p>
       <p>Place: <%= job.pick_up_location %></p>
-      <% if !current_user.all_my_jobs.include?(job) %>
-      <%= simple_form_for Request.new, url: user_requests_path(current_user, 
-  request: { user_id: current_user, requested_of_user_id: job.user, job_id: job, status: 'pending'}), method: :post do |f| %>
-      <%= f.button :submit, 'Walk this pup!', class: 'btn btn-success'%>
-      <% end %>
-      <% elsif current_user.jobs.include?(job) %>
-      <%= simple_form_for job, url: job_path(job, job: { hidden: true }) do |f| %>
-      <%= f.button :submit, 'Cancel walk', data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'%>
-      <% end %>
+
+      <% # if a user is signed in, grant them access to all the database interaction %>
+      <% if user_signed_in? %>
+          <% if !current_user.all_my_jobs.include?(job) %>
+              <%= simple_form_for Request.new, url: user_requests_path(current_user, 
+                  request: { user_id: current_user, requested_of_user_id: job.user, job_id: job, status: 'pending'}), method: :post do |f| %>
+                  <%= f.button :submit, 'Walk this pup!', class: 'btn btn-success'%>
+              <% end %>
+          <% elsif current_user.jobs.include?(job) # if current_user owns the job, allows 'destroying' %>
+              <%= simple_form_for job, url: job_path(job, job: { hidden: true }) do |f| %>
+                  <%= f.button :submit, 'Cancel walk', data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'%>    
+              <% end %>
+          <% else %>
+              <%= link_to 'Cancel walk', [current_user, job.requests.last], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+          <% end %>
+      <% # if a user is not signed in, then prompt them to sign in %>
       <% else %>
-      <%= link_to 'Cancel walk', [current_user, job.requests.last], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+          <%= link_to 'Walk this pup!', new_user_session_path, class: 'btn btn-success' %>
       <% end %>
+
     </div>
     <div class="col-md-3">
       <% if job.requests.empty? %>
