--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -23,11 +23,12 @@
                   request: { user_id: current_user, requested_of_user_id: job.user, job_id: job, status: 'pending'}), method: :post do |f| %>
                   <%= f.button :submit, 'Walk this pup!', class: 'btn btn-success'%>
               <% end %>
-          <% elsif current_user.jobs.include?(job) # if current_user owns the job, allows 'destroying' %>
+          <% elsif current_user.jobs.include?(job) # if current_user owns the job, allows 'destroying'/hiding the job %>
               <%= simple_form_for job, url: job_path(job, job: { hidden: true }) do |f| %>
                   <%= f.button :submit, 'Cancel walk', data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'%>    
               <% end %>
           <% else %>
+              <% # if current_user does not own the job, but instead owns the request, then destroy the request %>
               <%= link_to 'Cancel walk', [current_user, job.requests.last], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
           <% end %>
       <% # if a user is not signed in, then prompt them to sign in %>
