working on follow-up mailers, methods and tests

--- a/app/views/walk_request/walk_request.html.erb
+++ b/app/views/walk_request/walk_request.html.erb
@@ -10,6 +10,9 @@
   status: 'declined') %>
   </strong></p>
 
+<br>
+<%= render 'walk_request_person_details' %>
+<br>
 <%= render 'walk_request_details' %>
 <br>
 <%= render 'walk_request_cancel' %>
