add new navbar links and navigation per user feedback

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'New Job', new_job_path, class: 'btn btn-primary' %>
+Find a walker by posting a <%= link_to 'walker needed', new_job_path, class: 'btn btn-primary' %> item below
 
 <h1>Pups in need of a walk</h1>
 
