--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -20,9 +20,9 @@
 <br>
 
 <div>
-  <p><%= link_to "Walk an Amazonian's pup", jobs_path, class: 'btn btn-primary btn-xlarge' %></p>
+  <p><%= link_to 'Walk A Pup', jobs_path, class: 'btn btn-primary btn-xlarge' %></p>
 
   <br>
-
+  <p><%= link_to 'Find a Walker', users_path, class: 'btn btn-primary btn-xlarge' %></p>
   <p><%#= link_to "Have your pup walked by an Amazonian", availabilities_path, class: 'btn btn-primary btn-xlarge' %></p>
 </div>
