--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -19,7 +19,7 @@
       <% if user_signed_in? %>
       <%= render partial: 'jobs/buttons', locals: { job: job } %>
       <% else %>
-      <%= link_to 'Walk this pup!', new_user_session_path, class: 'btn btn-success' %>
+      <%#= link_to 'Walk this pup!', new_user_session_path, class: 'btn btn-success' %>
       <% end %>
       
     </div>
