--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,16 +1,6 @@
-<% if !user_signed_in? %>
-<%= link_to "Sign in", new_user_session_path, class: 'btn btn-success' %> 
- or 
-<%= link_to "Sign up", new_user_registration_path, class: 'btn btn-success' %>
- to get walking! 
-<br>
-<br>
-<br>
-<% end %>
+<%= render partial: 'users/session_buttons' %>
 
-
-
-<p>Find a walker by posting a <%= link_to 'walker needed', new_job_path, class: 'btn btn-primary' %> item below</p>
+<%= render partial: 'jobs/new_job_button' %>
 
 <h1>Pups in need of a walk</h1>
 
