--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,7 +2,7 @@
 <%= f.error_notification %>
 
 <div class="form-inputs">
-  <div class="col-md-5">  
+  <div class="col-md-3">  
     <%= f.input :first_name %>
     <%= f.input :last_name %>
     <%= f.input :email %>
@@ -13,19 +13,28 @@
     <%= f.input :pic %>
   </div>
 
-  <div class="col-md-5">  
+  <div class="col-md-3"> 
+    <strong>Acceptable Pup Size</strong>
     <%= f.input :small_pups %>
     <%= f.input :medium_pups %>
     <%= f.input :large_pups %>
     <%= f.input :giant_pups %>   
+  </div>
+
+  <div class="col-md-3">
+     <strong>Accepatable Pup Age</strong>
     <%= f.input :puppies %>
     <%= f.input :senior_pups %>
+  </div>
+
+  <div class="col-md-3">
+     <strong>Other Skills</strong>
     <%= f.input :pups_w_special_needs %>
     <%= f.input :oral_med_admin %>
   </div>
 </div>
 
-<div class="form-actions">
+<div class="form-actions col-md-12">
   <%= f.button :submit, class: 'btn btn-success' %>
 </div>
 <% end %>
