--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -9,7 +9,7 @@
 
 <div class="form-inputs col-md-4">
   <%= f.input :drop_off_location %>
-  <%= f.input :drop_off_time, ampm: true, minute_step: 15 %>
+  <%= f.input :drop_off_time, ampm: true, start_hour: 6, end_hour: 18, minute_step: 15, start_year: Time.now.year, end_year: Time.now.year + 1 %>
 </div>
 
 <div class="form-inputs col-md-2">
