--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,11 +58,10 @@
     <br>
 
     <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
-      <%= link_to 'About', about_path %>
-      <%= link_to 'Terms of Service', terms_of_service_path %>
-      <%= link_to 'Privacy Policy', privacy_policy_path %>
+      <p><%= link_to 'About', about_path %></p>
+      <p><%= link_to 'Terms of Service', terms_of_service_path %></p>
+      <p><%= link_to 'Privacy Policy', privacy_policy_path %></p>
       <br>
-      &copy 2015, etc.
     </div>
 
   </body>
