--- a/app/views/pups/_form.html.erb
+++ b/app/views/pups/_form.html.erb
@@ -4,22 +4,30 @@
 <br>
 
 <div class="form-inputs row">
-  <div class="col-md-6">
+  <div class="col-md-2">
+    <%= image_tag @pup.pup_pic, :class => 'img-responsive' %>
+    <%= f.input :pup_pic %>
+  </div>  
+  <div class="col-md-4">
     <%= f.input :pup_name %>
     <%= f.input :pup_breed %>
     <%= f.input :pup_weight %>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-4">
     <%= f.input :pup_gender %> 
     <%= f.input :pup_age %>
     <%= f.input :pup_vet_phone %>
+  </div>
+  <div class="col-md-2">
+    <%= f.input :spayed_neutered %> 
+    <%= f.input :special_needs %> 
   </div>
 </div>
 
 <div class="form-inputs row">
   <div class="col-md-12">
     <%= f.input :pup_care_instructions %>
-    <%= f.input :pup_pic %>
+
   </div>
 </div>
 
