bug fix related to showing hidden requests

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -29,10 +29,10 @@
       <p><%= "Oral medication administration #{user.oral_med_admin}" %></p>
     </div>
 
-    <div class="col-md-2"> 
-      <p><%= "Walks completed #{user.walks_completed}" %></p>
-      <h6><strong>When I walk pups, this is how others rate me:</strong></h6>
-      <p><%= "#{user.feedback_rating.round(1)} / 5" %></p>
-    </div>
+    <!-- <div class="col-md-2">  -->
+    <p><%#= "Walks completed #{user.walks_completed}" %></p>
+    <!-- <h6><strong>When I walk pups, this is how others rate me:</strong></h6> -->
+    <p><%#= "#{user.feedback_rating.round(1)} / 5" %></p>
+    <!-- </div> -->
   </div><!-- row -->
 </div><!-- booyah-box -->
