--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -10,5 +10,5 @@
 <h1>I am walking someone else's pup</h1> 
 <br>
 <% @requests.each do |request| %>
-<%= render partial: 'jobs/job', locals: { job: request.job } %>
+<%= render partial: 'jobs/job', locals: { job: request.job } unless request.hidden %>
 <% end %>
